# Shop

./: .gitignore  README.md  Shop.yaml  alembic.ini  config.py  data_import.py  email.py  hashing.py  main.py  pyproject.toml  requirements.txt  send_email.py
controllers/: user.py
migrations/: env.py
models/: database.py  models.py  schemas.py
routers/: order.py  product.py  users.py
views/: users.py
